# SGW-Homeassistant

./: LICENSE  README.md
components/ha-ble-monitor/: Makefile
components/ha-dataplicity/: Makefile
components/ha-esphomeapi/: Makefile
components/ha-hacs/: Makefile
components/ha-homekit/: Makefile
components/ha-miio/: Makefile
components/ha-webrtc/: Makefile
components/ha-wled/: Makefile
components/ha-xiaomi-airpurifier/: Makefile
components/ha-xiaomigateway3/: Makefile
components/ha-yaha/: Makefile
components/ha-yandexstation/: Makefile
components/ha-yeelight/: Makefile
components/ha-zha/: Makefile
components/hass-configurator/: Makefile
components/hass-nabucasa/: Makefile
components/homeassistant-cli/: Makefile
components/python-hass-nabucasa/: Makefile
components/python-home-assistant-frontend/: Makefile
components/python-home-assistant-frontend/files/: PKG-INFO  setup.cfg
ha-all/: Makefile
homeassistant/: Makefile
homeassistant/files/: homeassistant
homeassistant/patches/: 001-fix_version_system.patch  002-add-setup_py.patch  002-fix_version_pip.patch  003-fix_version_cryptography.patch  003-remove_nabucasa.patch  004-fix_network_mdns.patch  099-setuptools_openwrt_build.patch  999-bump_voluptuous_0.13.1.patch
packets/python-ha-aiohomekit/: Makefile
packets/python-ha-aiohttp-cors/: Makefile
packets/python-ha-aiosqlite/: Makefile
packets/python-ha-aresponses/: Makefile
packets/python-ha-astpath/: Makefile
packets/python-ha-async-timeout/: Makefile
packets/python-ha-atomicwrites/: Makefile
(+265 files in other folders)
